fixed button shift, bars change color with depletion at certain values

--- a/styles/main.css
+++ b/styles/main.css
@@ -94,10 +94,10 @@ img {
 
 .care-button {
     position: absolute;
-    margin-top: 30px;
+    margin-top: 50px;
     font-size: 20px;
-    margin-left: -50px;
 }
+
 
 button {
     color: black;
